2004-09-08  Chris Blumenberg  <cblu@apple.com>

	Forgot to add this in previous check-in.	

        * English.lproj/WebViewEditingContextMenu.nib: Added.

2004-09-08  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3791240> WebKit uses the NSTextViewContextMenu nib from inside AppKit

        Reviewed by john.

        * English.lproj/StringsNotToBeLocalized.txt:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultUIDelegate editingContextMenuItemsForElement:]): use our copy of the nib

2004-09-07  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Update for recent changes.

2004-09-07  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3790143> exception raised when dragging a URL with 2-byte characters

	(checked in with last check-in)

2004-09-07  Chris Blumenberg  <cblu@apple.com>

	Fixed:
	<rdar://problem/3080103> Need to pass cmd-modified keys to plug-ins
	<rdar://problem/3751509> can't use safari edit menu to copy and paste with Vantage Learning's My Access

        Reviewed by john.

        * Plugins.subproj/WebBaseNetscapePluginView.m: fake up command-key events for cut, copy, paste and select all so these menu items work for plug-ins
        (-[WebBaseNetscapePluginView sendModifierEventWithKeyCode:character:]):
        (-[WebBaseNetscapePluginView cut:]):
        (-[WebBaseNetscapePluginView copy:]):
        (-[WebBaseNetscapePluginView paste:]):
        (-[WebBaseNetscapePluginView selectAll:]):

2004-09-07  Darin Adler  <darin@apple.com>

        - fixed deployment build

        * WebView.subproj/WebHTMLView.m: (-[WebHTMLView _deleteWithDirection:granularity:killRing:]):
        Initialize prepend variable.

2004-09-06  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/3696542> REGRESSION (Mail): Editable WebKit doesn't support underline yet (in the iChat profile window, at least)